Started work on switching cardano-ledger-core to cardano-ledger-binary

--- a/libs/cardano-ledger-core/cardano-ledger-core.cabal
+++ b/libs/cardano-ledger-core/cardano-ledger-core.cabal
@@ -77,7 +77,7 @@ library
     base16-bytestring,
     binary,
     bytestring,
-    cardano-binary,
+    cardano-ledger-binary,
     cardano-crypto,
     cardano-crypto-class,
     cardano-crypto-praos,
