Move CBORGroup into cardano-ledger-binary

--- a/libs/cardano-ledger-binary/cardano-ledger-binary.cabal
+++ b/libs/cardano-ledger-binary/cardano-ledger-binary.cabal
@@ -38,6 +38,7 @@ library
                      Cardano.Ledger.Binary.Decoding
                      Cardano.Ledger.Binary.Encoding
                      Cardano.Ledger.Binary.FlatTerm
+                     Cardano.Ledger.Binary.Group
                      Cardano.Ledger.Binary.Version
   other-modules:
                      Cardano.Ledger.Binary.Encoding.Coders
