--- a/eras/shelley/impl/cardano-ledger-shelley.cabal
+++ b/eras/shelley/impl/cardano-ledger-shelley.cabal
@@ -97,10 +97,10 @@ library
   build-depends:
     aeson >= 2,
     bytestring,
-    cardano-binary,
     cardano-crypto-class,
     cardano-crypto-wrapper,
     cardano-data,
+    cardano-ledger-binary,
     cardano-ledger-byron,
     cardano-ledger-core,
     cardano-slotting,
