--- a/eras/shelley-ma/impl/cardano-ledger-shelley-ma.cabal
+++ b/eras/shelley-ma/impl/cardano-ledger-shelley-ma.cabal
@@ -52,6 +52,10 @@ library
   other-modules:
     Cardano.Ledger.ShelleyMA.Era
     Cardano.Ledger.ShelleyMA.Rules.Utxo
+    Cardano.Ledger.ShelleyMA.Rules.Utxo
+
+  other-modules:
+    Cardano.Ledger.ShelleyMA.Era
     Cardano.Ledger.ShelleyMA.Rules.Utxow
 
   build-depends:
