cardano-ledger-shelley-ma is done

--- a/eras/shelley-ma/impl/cardano-ledger-shelley-ma.cabal
+++ b/eras/shelley-ma/impl/cardano-ledger-shelley-ma.cabal
@@ -61,9 +61,9 @@ library
   build-depends:
     bytestring,
     base16-bytestring,
-    cardano-binary,
     cardano-crypto-class,
     cardano-data,
+    cardano-ledger-binary,
     cardano-ledger-core,
     cardano-slotting,
     cborg,
