--- a/eras/babbage/impl/cardano-ledger-babbage.cabal
+++ b/eras/babbage/impl/cardano-ledger-babbage.cabal
@@ -67,6 +67,7 @@ library
                 data-default,
                 deepseq,
                 microlens,
+                mtl,
                 nothunks,
                 plutus-ledger-api ^>= 1.1,
                 set-algebra,
