--- a/eras/shelley/test-suite/cardano-ledger-shelley-test.cabal
+++ b/eras/shelley/test-suite/cardano-ledger-shelley-test.cabal
@@ -85,12 +85,12 @@ library
                 base16-bytestring >= 1,
                 binary,
                 bytestring,
-                cardano-binary,
                 cardano-crypto,
                 cardano-crypto-class,
                 cardano-crypto-test,
                 cardano-crypto-wrapper,
                 cardano-data,
+                cardano-ledger-binary,
                 cardano-ledger-byron,
                 cardano-ledger-byron-test,
                 cardano-ledger-core,
