Improve Arbitrary by tapping into StatefulGen

--- a/libs/cardano-ledger-binary/cardano-ledger-binary.cabal
+++ b/libs/cardano-ledger-binary/cardano-ledger-binary.cabal
@@ -112,6 +112,7 @@ library testlib
                    , primitive
                    , QuickCheck
                    , quickcheck-instances
+                   , random >= 1.2
                    , text
                    , vector
                    , vector-map
