--- a/libs/cardano-ledger-pretty/cardano-ledger-pretty.cabal
+++ b/libs/cardano-ledger-pretty/cardano-ledger-pretty.cabal
@@ -42,6 +42,7 @@ library
   build-depends:
                 bech32,
                 bytestring,
+                cardano-binary,
                 cardano-crypto-class,
                 cardano-ledger-alonzo,
                 cardano-ledger-babbage,
